#!/usr/bin/env python3
"""
AIVA gRPC æœå‹™å™¨å•Ÿå‹•è…³æœ¬
=========================

çµ±ä¸€é€šä¿¡æ¶æ§‹çš„ gRPC æœå‹™å…¥å£é»

åŠŸèƒ½:
- å•Ÿå‹•å¤šæœå‹™ gRPC æœå‹™å™¨
- é›†æˆçµ±ä¸€ MQ ç³»çµ±
- æä¾›å¥åº·æª¢æŸ¥å’Œç›£æ§
- æ”¯æ´å„ªé›…é—œæ©Ÿ
"""

import asyncio
import signal
import logging
import sys
from pathlib import Path
from typing import Optional

# ç¢ºä¿ AIVA æ¨¡å¡Šè·¯å¾‘
sys.path.insert(0, str(Path(__file__).parent.parent.parent))

from services.aiva_common.grpc.grpc_server import AIVAGRPCServer
from services.aiva_common.utils.logging import setup_logger

logger = setup_logger(__name__)


class AIVAGRPCServerLauncher:
    """AIVA gRPC æœå‹™å™¨å•Ÿå‹•å™¨"""
    
    def __init__(self, host: str = "0.0.0.0", port: int = 50051):
        self.host = host
        self.port = port
        self.server: Optional[AIVAGRPCServer] = None
        self._shutdown_event = asyncio.Event()
    
    def setup_signal_handlers(self):
        """è¨­ç½®ä¿¡è™Ÿè™•ç†å™¨"""
        def signal_handler(signum, frame):
            logger.info(f"ğŸ“¡ æ”¶åˆ°ä¿¡è™Ÿ {signum}ï¼Œé–‹å§‹å„ªé›…é—œæ©Ÿ...")
            self._shutdown_event.set()
        
        signal.signal(signal.SIGINT, signal_handler)
        signal.signal(signal.SIGTERM, signal_handler)
    
    async def start_server(self):
        """å•Ÿå‹• gRPC æœå‹™å™¨"""
        try:
            logger.info("ğŸš€ åˆå§‹åŒ– AIVA gRPC æœå‹™å™¨...")
            
            # å‰µå»ºæœå‹™å™¨å¯¦ä¾‹
            self.server = AIVAGRPCServer(host=self.host, port=self.port)
            
            # å•Ÿå‹•æœå‹™å™¨
            await self.server.start()
            
            logger.info("âœ… AIVA gRPC æœå‹™å™¨å·²å•Ÿå‹•")
            logger.info(f"ğŸ“ ç›£è½åœ°å€: {self.host}:{self.port}")
            logger.info("ğŸ”§ æ”¯æ´æœå‹™:")
            logger.info("   - TaskService (ä»»å‹™ç®¡ç†)")
            logger.info("   - CrossLanguageService (è·¨èªè¨€èª¿ç”¨)")
            logger.info("   - HealthCheck (å¥åº·æª¢æŸ¥)")
            logger.info("ğŸ“¡ çµ±ä¸€ MQ ç³»çµ±å·²é›†æˆ")
            logger.info("ğŸ¯ æº–å‚™æ¥æ”¶è«‹æ±‚...")
            
        except Exception as e:
            logger.error(f"âŒ æœå‹™å™¨å•Ÿå‹•å¤±æ•—: {e}")
            raise
    
    async def wait_for_shutdown(self):
        """ç­‰å¾…é—œæ©Ÿä¿¡è™Ÿ"""
        await self._shutdown_event.wait()
        
        logger.info("ğŸ”„ é–‹å§‹é—œé–‰ gRPC æœå‹™å™¨...")
        
        if self.server:
            await self.server.stop()
            logger.info("âœ… gRPC æœå‹™å™¨å·²é—œé–‰")
        
        logger.info("ğŸ‘‹ AIVA gRPC æœå‹™å™¨å·²å„ªé›…é€€å‡º")
    
    async def run(self):
        """é‹è¡Œæœå‹™å™¨"""
        try:
            # è¨­ç½®ä¿¡è™Ÿè™•ç†
            self.setup_signal_handlers()
            
            # å•Ÿå‹•æœå‹™å™¨
            await self.start_server()
            
            # ç­‰å¾…é—œæ©Ÿä¿¡è™Ÿ
            await self.wait_for_shutdown()
            
        except KeyboardInterrupt:
            logger.info("ğŸ›‘ æ”¶åˆ°éµç›¤ä¸­æ–·ï¼Œé—œé–‰æœå‹™å™¨...")
        except Exception as e:
            logger.error(f"âŒ æœå‹™å™¨é‹è¡ŒéŒ¯èª¤: {e}")
            return 1
        
        return 0


async def main():
    """ä¸»å‡½æ•¸"""
    import argparse
    
    parser = argparse.ArgumentParser(
        description="AIVA gRPC çµ±ä¸€æœå‹™å™¨",
        formatter_class=argparse.RawDescriptionHelpFormatter,
        epilog="""
ç¤ºä¾‹:
  python start_grpc_server.py                    # ä½¿ç”¨é è¨­é…ç½®å•Ÿå‹•
  python start_grpc_server.py --host 0.0.0.0    # ç›£è½æ‰€æœ‰ä»‹é¢
  python start_grpc_server.py --port 8080       # ä½¿ç”¨è‡ªè¨‚ç«¯å£
        """
    )
    
    parser.add_argument(
        "--host", 
        default="0.0.0.0",
        help="æœå‹™å™¨ç›£è½åœ°å€ (é è¨­: 0.0.0.0)"
    )
    
    parser.add_argument(
        "--port", 
        type=int,
        default=50051,
        help="æœå‹™å™¨ç›£è½ç«¯å£ (é è¨­: 50051)"
    )
    
    parser.add_argument(
        "--debug",
        action="store_true",
        help="å•Ÿç”¨é™¤éŒ¯æ¨¡å¼"
    )
    
    args = parser.parse_args()
    
    # è¨­ç½®æ—¥èªŒç´šåˆ¥
    if args.debug:
        logging.getLogger().setLevel(logging.DEBUG)
        logger.info("ğŸ› é™¤éŒ¯æ¨¡å¼å·²å•Ÿç”¨")
    
    # é¡¯ç¤ºå•Ÿå‹•è³‡è¨Š
    logger.info("=" * 60)
    logger.info("ğŸ¤– AIVA v5.0 çµ±ä¸€é€šä¿¡æ¶æ§‹")
    logger.info("ğŸš€ gRPC æœå‹™å™¨å•Ÿå‹•ä¸­...")
    logger.info(f"ğŸ“ åœ°å€: {args.host}:{args.port}")
    logger.info("=" * 60)
    
    # å‰µå»ºä¸¦é‹è¡Œå•Ÿå‹•å™¨
    launcher = AIVAGRPCServerLauncher(host=args.host, port=args.port)
    return await launcher.run()


if __name__ == "__main__":
    try:
        # é‹è¡Œä¸»å‡½æ•¸
        exit_code = asyncio.run(main())
        sys.exit(exit_code)
        
    except KeyboardInterrupt:
        logger.info("ğŸ›‘ ç”¨æˆ¶ä¸­æ–·ï¼Œé€€å‡ºç¨‹åº")
        sys.exit(0)
    except Exception as e:
        logger.error(f"âŒ ç¨‹åºç•°å¸¸é€€å‡º: {e}")
        sys.exit(1)